--- a/07-Backend-MVC/CarritoCompras/views/busquedaSpringer.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/busquedaSpringer.ejs
@@ -454,34 +454,29 @@
           autor1 + "</h4></b><br><h4><b>" + autor2 + "</h4></b><br><h4><b>" + autor3 + "</h4></b><br><h4><b>" + autor4 + "</h4></b><br><h4><b>" + autor5 + "</h4></b><br>" +
           // "<div class='row'></b>" +
 
-          "<div class='col-md-3'><font color='#01549b'><h4><b> Número: </b></h4></font> </div>" +
-          "<div class='col-md-3'><h4><b>" + number + "</h4></b></div>" +
-          "<div class='col-md-3'> </div>" +
-          "<div class='col-md-3'> </div>" +
+          "<div class='col-md-2'><font color='#01549b'><h4><b> Número: </b></h4></font> </div>" +
+          "<div class='col-md-6'><h4><b>" + number + "</h4></b></div>" +
+          "<div class='col-md-4'> </div>" +
 
 
-          "<div class='col-md-3'><font color='#01549b'><h4><b> Volumen: </b></h4></font> </div>" +
-          "<div class='col-md-3'><h4><b>" + volume + "</h4></b></div>" +
-          "<div class='col-md-3'> </div>" +
-          "<div class='col-md-3'> </div>" +
+          "<div class='col-md-2'><font color='#01549b'><h4><b> Volumen: </b></h4></font> </div>" +
+          "<div class='col-md-6'><h4><b>" + volume + "</h4></b></div>" +
+          "<div class='col-md-4'> </div>" +
 
 
-          "<div class='col-md-3'><font color='#01549b'><h4><b> Issns: </b></h4></font> </div>" +
-          "<div class='col-md-3'><h4><b>" + issns + "</h4></b></div>" +
-          "<div class='col-md-3'> </div>" +
-          "<div class='col-md-3'> </div>" +
+          "<div class='col-md-2'><font color='#01549b'><h4><b> Issns: </b></h4></font> </div>" +
+          "<div class='col-md-6'><h4><b>" + issns + "</h4></b></div>" +
+          "<div class='col-md-4'> </div>" +
 
 
-          "<div class='col-md-3'><font color='#01549b'><h4><b> Año de publicación: </b></h4></font> </div>" +
-          "<div class='col-md-3'><h4><b>" + year + "</h4></b></div>" +
-          "<div class='col-md-3'> </div>" +
-          "<div class='col-md-3'> </div>" +
+          "<div class='col-md-2'><font color='#01549b'><h4><b> Año de publicación: </b></h4></font> </div>" +
+          "<div class='col-md-6'><h4><b>" + year + "</h4></b></div>" +
+          "<div class='col-md-4'> </div>" +
 
 
-          "<div class='col-md-3'><font color='#01549b'><h4><b> Páginas: </b></h4></font> </div>" +
-          "<div class='col-md-3'><h4><b>" + pages + "</h4></b></div>" +
-          "<div class='col-md-3'> </div>" +
-          "<div class='col-md-3'> </div>" +
+          "<div class='col-md-2'><font color='#01549b'><h4><b> Páginas: </b></h4></font> </div>" +
+          "<div class='col-md-6'><h4><b>" + pages + "</h4></b></div>" +
+          "<div class='col-md-4'> </div>" +
 
           <!-- Button trigger modal -->
           "<button type='button' class='btn btn-primary mb-2' data-toggle='modal' data-target='#exampleModal"+i+"'> Bibliografía </button>"+
@@ -559,7 +554,7 @@
           "<input hidden type='text' name='category' value='" + cate + "'>" +
           "<input hidden type='text' name='pages' value='" + pages + "'>" +
 
-          "<button class='btn btn-outline-success'>Guardar en biblioteca</button>" +
+          "<button class='btn btn-outline-success'>Guardar en mi biblioteca</button>" +
 
           "</div> " +
           "</form>"+ "<br><br>"+
@@ -584,7 +579,8 @@
     // Llamada al webservice
     function callWebService2()
     {
-      var busquedaspring = document.getElementById("homepage-search-input").value;//Obtenemos la palabra o frace a buscar
+      var busquedaspring1 = document.getElementById("homepage-search-input").value;//Obtenemos la palabra o frace a buscar
+      var busquedaspring = busquedaspring1.replace(/\s/g,"%20");
       if(busquedaspring==''){
         alert('Debes ingresar una plabra !');
       }else {
@@ -948,7 +944,7 @@
           "<input hidden type='text' name='category' value='" + cate + "'>" +
           "<input hidden type='text' name='pages' value='" + pages + "'>" +
 
-          "<button class='btn btn-outline-success'>Guardar en biblioteca</button>" +
+          "<button class='btn btn-outline-success'>Guardar en mi biblioteca</button>" +
 
           "</div> " +
           "</form>"+ "<br><br>"+
@@ -978,7 +974,8 @@
     // Llamada al webservice
     function callWebService1()
     {
-      var busqueda = document.getElementById("homepage-search-input").value;
+      var busqueda1 = document.getElementById("homepage-search-input").value;
+      var busqueda = busqueda1.replace(/\s/g,"%20");
       var var1= "https://core.ac.uk/api-v2/articles/search/";
       var var2= "?page=1&pageSize=10&metadata=true&fulltext=false&citations=false&similar=false&duplicate=false&urls=false&faithfulMetadata=false&apiKey=7scnV9e3mTBKqirNjPlUO8whkZC1bxaA";
       mm= busqueda;
