--- a/07-Backend-MVC/CarritoCompras/views/header.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/header.ejs
@@ -1,3 +1,11 @@
+<% if(req.cookies.User){ %>
+<div>
+</div>
+<%}else{%>
+<div class="alert alert-warning">
+    <strong>Aviso!</strong> Debes autenticarte para acceder al sistema.
+  </div>
+<%}%>
 <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -6,12 +14,8 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-
-      <li class="nav-item active">
-        <a class="nav-link" href="/perfil"><h5>Perfil</h5></a>
-      </li>
       <li class="dropdown">
-        <a class="nav-link" data-toggle="dropdown" href="/busqueda"><h5>Busqueda</h5> <span class="caret"></span></a>
+        <a class="nav-link" data-toggle="dropdown" href="/busqueda"><h5>Búsqueda</h5> <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li class="nav-item active"><a class="nav-link" href="/busqueda">DOAJ</a></li>
           <li class="nav-item active"><a class="nav-link"  href="/busquedaSpringer">Springer</a></li>
@@ -34,3 +38,4 @@
     </ul>
   </div>
 </nav>
+
