controlar que el archivo so exceda los 2mb

--- a/07-Backend-MVC/CarritoCompras/views/busqueda.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/busqueda.ejs
@@ -583,7 +583,7 @@
       var imprimir =
         "<div class='card my-2'>" +
         "<div >" +
-        "<h4><b></h4></b><br>" +"<a href=" +url+"><h4><b>" + title  +"</b></h4></a>"+
+        "<h4><b></h4></b><br>" +"<a target='_blank' rel='noopener noreferrer' href=" +url+"><h4><b>" + title  +"</b></h4></a>"+
         "<font color='#01549b'><h4><b> Journal:</b></h4></font><h4><b>" + journal + "</h4></b><br>" +
         "<button type='button' class='btn btn-outline-info' data-toggle='collapse' data-target='#demo"+i+"'>Leer más...</button>"+
         "<div id='demo"+i+"' class='collapse in'>"+
@@ -1066,7 +1066,7 @@
         var imprimir =
           "<div style='width: 1000px;' class='card my-2'>" +
           "<div >" +
-          "<b></b><br>" +"<a href=" +url+"><h4><b>" + title  +"</b></h4></a>"+
+          "<b></b><br>" +"<a target='_blank' rel='noopener noreferrer' href=" +url+"><h4><b>" + title  +"</b></h4></a>"+
           "<font color='#01549b'><h4><b> Editor:</b></h4></font><h4><b>" + publisher + "</b></h4><br>" +
           "<button type='button' class='btn btn-outline-info' data-toggle='collapse' data-target='#demo"+i+"'>Leer más...</button>"+
           "<div id='demo"+i+"' class='collapse in'>"+
