--- a/07-Backend-MVC/CarritoCompras/views/busquedaArxiv.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/busquedaArxiv.ejs
@@ -458,7 +458,7 @@ xhtml1/DTD/xhtml1-transitional.dtd">
               "<div class='card'>" +
               "<div >" +
                 "<br>"+
-              '<a href= '+url+'><h4><b>' + title  +'</b></h4></a>'+
+              '<a target="_blank" href= '+url+'><h4><b>' + title  +'</b></h4></a>'+
               "<font color='#01549b'><h4><b><u> Coments: </u></b></h4></font><h4><b>" + coment+' '+coment2 + "</h4></b><br>" +
               "<button type='button' class='btn btn-outline-info' data-toggle='collapse' data-target='#demo"+i+"'>Leer más...</button>"+
               "<div id='demo"+i+"' class='collapse in'>"+
