--- a/07-Backend-MVC/CarritoCompras/views/biblioteca.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/biblioteca.ejs
@@ -54,11 +54,11 @@
                value="<%=articulos[i].id%>"
                name="id">
         <button  type="submit"
-                 class="btn btn-outline-danger">Delete</button>
+                 class="btn btn-outline-danger">Borrar</button>
 
         <a href="/VerArticulo?id=<%=articulos[i].id%>">
           <button type="button" class="btn btn-primary">
-            See
+            Ver
           </button>
         </a>
       </form>
