--- a/07-Backend-MVC/CarritoCompras/views/busquedaSpringer.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/busquedaSpringer.ejs
@@ -441,7 +441,7 @@
         var imprimir = "<div class='container my-2'> " +
           "<div class='card'> <div class='card'>" +
           "<div>" +
-          "<h4><b></h4></b><br>" +"<a href=" +url+"><h4><b>" + title  +"</b></h4></a>"+
+          "<h4><b></h4></b><br>" +"<a target='_blank' href=" +url+"><h4><b>" + title  +"</b></h4></a>"+
           "<font color='#01549b'><h4><b> Journal:</b></h4></font><h4><b>" + journal + "</h4></b><br>"+
 
           "<button type='button' class='btn btn-outline-info' data-toggle='collapse' data-target='#demo"+i+"'>Leer más...</button>"+
@@ -860,7 +860,7 @@
         var imprimir =
           "<div style='width: 1000px;' class='card my-2'>" +
           "<div >" +
-          "<b></b><br>" +"<a href=" +url+"><h4><b>" + title  +"</b></h4></a>"+
+          "<b></b><br>" +"<a target='_blank' href=" +url+"><h4><b>" + title  +"</b></h4></a>"+
           "<font color='#01549b'><h4><b> Editor:</b></h4></font><h4><b>" + publisher + "</b></h4><br>" +
           "<button type='button' class='btn btn-outline-info' data-toggle='collapse' data-target='#demo"+i+"'>Leer más...</button>"+
           "<div id='demo"+i+"' class='collapse in'>"+
